# balboa

balboa_controllers/: CMakeLists.txt  package.xml
balboa_controllers/config/: pitch_controller.yaml  velocity_controller.yaml
balboa_controllers/include/balboa_controllers/: diffdrive_controller.hpp  pitch_controller.hpp  velocity_controller.hpp
balboa_controllers/src/: diffdrive_controller.cpp  diffdrive_controller_node.cpp  pitch_controller.cpp  pitch_controller_node.cpp  velocity_controller.cpp  velocity_controller_node.cpp
balboa_description/: CMakeLists.txt  package.xml
balboa_description/config/: gazebo_params.yaml
balboa_description/launch/: balboa.launch.py
balboa_description/meshes/: body.scad  body.stl
balboa_description/urdf/: balboa.urdf.xacro  wheel.urdf.xacro
balboa_description/worlds/: empty.world
balboa_drivers/: CMakeLists.txt  package.xml
balboa_drivers/include/balboa_drivers/: diffdrive.hpp
balboa_drivers/src/: diffdrive.cpp  diffdrive_node.cpp
balboa_gazebo_plugins/: CMakeLists.txt  package.xml
balboa_gazebo_plugins/include/balboa_gazebo_plugins/: gazebo_ros_diffdrive_controller.hpp  gazebo_ros_helpers.hpp
balboa_gazebo_plugins/src/: gazebo_ros_diffdrive_controller.cpp  gazebo_ros_helpers.cpp
